2012-08-16  Corinna Vinschen  <corinna@vinschen.de>

	* ps.cc (main): Define uid correctly as uid_t.

2012-08-16  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc: Change include path to not depend on installed
	cygwin/version.h.
	(_NOMNTENT_MACROS): Define before including mntent.h.
	* path.cc (_NOMNTENT_MACROS): Ditto.
	* dump_setup.cc: Add temporary workaround to handle older Mingw header
	files on Fedora 17.
	* strace.cc: Ditto.

2012-08-13  Corinna Vinschen  <corinna@vinschen.de>

	* ps.cc (main): Drop unneeded cast.

2012-07-11  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (cygcheck.exe): Link against psapi.dll.
	* bloda.cc: Change include section to work with Mingw64 headers.
	Include psapi.h.  Use SystemProcessInformation instead of
	SystemProcessesAndThreadsInformation throughout and add define for
	w32api headers.  Ditto for PSYSTEM_PROCESS_INFORMATION vs.
	PSYSTEM_PROCESSES.
	(system_module_list): New type to replace SYSTEM_MODULE_INFORMATION.
	Change usage throughout accordingly.
	(get_module_list): Fetch module list using PSAPI functions
	EnumDeviceDrivers and GetDeviceDriverBaseNameA.
	* cygcheck.cc (max): Define as __max if not defined already.
	(alloca): Only define if not defined already.
	(handle_unique_object_name): Use explicit sharing flags rather than
	FILE_SHARE_VALID_FLAGS which officially is only available in DDK
	headers.
	(PRODUCT_ULTIMATE_E): Only define if not defined already.
	* dump_setup.cc: Change include section to work with Mingw64 headers.
	(NtQueryAttributesFile): Drop NTOSAPI aka DECLSPEC_IMPORT.
	* strace.cc: Change include section to work with Mingw64 headers.
	(alloca): Only define if not defined already.

2012-07-06  Corinna Vinschen  <corinna@vinschen.de>

	* cygpath.cc: Change including headers to allow building against
	Mingw64 headers. Include ntdef.h and ntdll.h rather than ddk headers.
	Define _WIN32_WINNT and WINVER as 0x0602.
	(RtlEqualUnicodePathPrefix): Drop definition.  Pulled in from ntdll.h